fix: 웹 링크로 받아오는 것에서 파일 업로드 방식으로 변경